formatData identity client
