# api/models/client.model.js
@@ -142,6 +142,10 @@ const clientSchema = new mongoose.Schema(
         default: null,
       },
     },
+    rememberMe: {
+      type: Boolean,
+      default: false,
+    },
   },
   {
     timestamps: true,
